--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,6 +15,10 @@ h1 {
     width: 50%;
 }
 
+/* ----------------------------------------- */
+/* THE CSS FOR POSITIONING ITEMS ON A CIRCLE */
+/* ----------------------------------------- */
+
 .circle-container {
     position: relative;
     width: 24em;
@@ -34,8 +38,36 @@ h1 {
 }
 .circle-container img { display: block; width: 100%; }
 .deg0 { transform: translate(12em); } /* 12em = half the width of the wrapper */
-.deg45 { transform: rotate(45deg) translate(12em) rotate(-45deg); }
-.deg135 { transform: rotate(135deg) translate(12em) rotate(-135deg); }
-.deg180 { transform: translate(-12em); }
-.deg225 { transform: rotate(225deg) translate(12em) rotate(-225deg); }
-.deg315 { transform: rotate(315deg) translate(12em) rotate(-315deg); }
+.deg72 { transform: rotate(72deg) translate(12em) rotate(-72deg); }
+.deg144 { transform: rotate(144deg) translate(12em) rotate(-144deg); }
+.deg216 { transform: rotate(216deg) translate(-12em) rotate(-216deg)}
+.deg288 { transform: rotate(288deg) translate(12em) rotate(-288deg); }
+.deg360 { transform: rotate(360deg) translate(12em) rotate(-360deg); }
+
+/* ---------------------------------------------- */
+/* </ THE CSS FOR POSITIONING ITEMS ON A CIRCLE > */
+/* ---------------------------------------------- */
+
+#bookschat {
+    background-color: #e0f7fa;
+
+}
+
+#techchat {
+    background-color: #f3e5f5;
+
+}
+
+#musicchat {
+    background-color: #ffcdd2;
+
+}
+
+#moviechat {
+    background-color: #ffecb3;
+
+}
+
+#sportschat {
+    background-color: #b9f6ca;
+}
